--- a/index.html
+++ b/index.html
@@ -15,8 +15,37 @@
 
         <div class="teclado">
     . . .
-        </div>
 
+    
+    <div class="teclado--linha">
+        <div class="teclado--botao">1</div>
+        <div class="teclado--botao">2</div>
+        <div class="teclado--botao">3</div>
+     </div>
+
+     <div class="teclado--linha">
+        <div class="teclado--botao">4</div>
+        <div class="teclado--botao">5</div>
+        <div class="teclado--botao">6</div>
+     </div>
+
+     <div class="teclado--linha">
+        <div class="teclado--botao">7</div>
+        <div class="teclado--botao">8</div>
+        <div class="teclado--botao">9</div>
+     </div>
+
+     <div class="teclado--linha">
+        <div class="teclado--botao">0</div>
+     </div>
+
+     <div class="teclado--linha">
+        <div class="teclado--botao teclado--botao--branco"> BRANCO </div>
+        <div class="teclado--botao  teclado--botao--corrigir"> CORRIGE </div>
+        <div class="teclado--botao  teclado--botao--confirmar"> CONFIRMA </div>
+     </div>
+
+        </div>
     </div>
     
 </body>
