--- a/index.html
+++ b/index.html
@@ -7,16 +7,57 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="urna">
+
+<div class="urna">
         <div class="tela">
-    . . .
+
+            <div class="d-1">
+                <div class="d-1-left">
+                    <div class="d-1-1">
+                        <span> SEU VOTO PARA </span>
+                    </div>
+
+                    <div class="d-1-2">
+                        <span> PREFEITO </span>
+                    </div>
+
+                    <div class="d-1-3">
+                       <div class="numero pisca"> </div>
+                       <div class="numero"> </div>
+                    </div>
+
+                    <div class="d-1-4">
+                        Nome: FULANO DA SILVA <br>
+                        Partido: PCQ <br>
+                        Vice-prefeito: BELTRANO DE OLIVEIRA
+                    </div>
+
+                </div>
+                <div class="d-1-right">
+                 <div class="d-1-image">
+                    <img src="images/84.png" alt=""/> 
+                    Prefeito
+                 </div>
+                 <div class="d-1-image small">
+                    <img src="images/84_2.png" alt=""/> 
+                    Vice-prefeito
+                 </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="d-2">
+                Aperte a tecla: </br>
+                CONFIRMA para CONFIRMAR este voto </br>
+                CORRIGE para REINICIAR este voto  </br>
+            </div>
         </div>
 
 
         <div class="teclado">
-    . . .
 
-    
     <div class="teclado--linha">
         <div class="teclado--botao">1</div>
         <div class="teclado--botao">2</div>
@@ -40,13 +81,19 @@
      </div>
 
      <div class="teclado--linha">
-        <div class="teclado--botao teclado--botao--branco"> BRANCO </div>
-        <div class="teclado--botao  teclado--botao--corrigir"> CORRIGE </div>
-        <div class="teclado--botao  teclado--botao--confirmar"> CONFIRMA </div>
+        <div class="teclado--botao  botao--branco"> BRANCO </div>
+        <div class="teclado--botao  botao--corrigir"> CORRIGE </div>
+        <div class="teclado--botao  botao--confirmar"> CONFIRMA </div>
      </div>
 
         </div>
-    </div>
-    
+</div>
+
+<script src="etapas.js"></script>
+<script src="script.js"></script>
+
+
+
+
 </body>
 </html>
